[package]
name = "retch-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
h2 = "0.4.7"
retch = { git="https://github.com/retch-http/retch.git", branch="master" }
rustls = { version="0.23.16" }
tokio = { version="1.41.1", features = ["full"] }
aws-lc-rs = { version = "1.11.1", features = ["bindgen"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] }

[target.arm-unknown-linux-musleabi.dependencies]
openssl = { version = "*", features = ["vendored"] }

[patch.crates-io]
rustls = { git="https://github.com/retch-http/rustls.git", branch="retch-patch" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
